基本功能完善

--- a/RichMan/manifest.json
+++ b/RichMan/manifest.json
@@ -8,15 +8,22 @@
 		"libs/modules/promise/promise.js"
 	],
 	"game": [
-		"bin-debug/enum/JewelsType.js",
+		"bin-debug/enum/Colors.js",
+		"bin-debug/Boss.js",
 		"bin-debug/Jewels.js",
+		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
-		"bin-debug/enum/Colors.js",
+		"bin-debug/Player.js",
+		"bin-debug/controller/GameController.js",
+		"bin-debug/enum/BossType.js",
+		"bin-debug/Common.js",
 		"bin-debug/enum/Font.js",
-		"bin-debug/LoadingUI.js",
+		"bin-debug/enum/JewelsType.js",
 		"bin-debug/enum/Language.js",
+		"bin-debug/enum/PlayerType.js",
 		"bin-debug/scene/FailScene.js",
+		"bin-debug/scene/GameEndScene.js",
 		"bin-debug/scene/GameScene.js",
 		"bin-debug/scene/SceneManager.js",
 		"bin-debug/scene/StartScene.js"
